[package]
name = "mithril-stm"
version = "0.3.8"
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A Rust implementation of Mithril Stake-based Threshold Multisignatures (STMs)."
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
blake2 = "0.10.6"
blst = { version = "0.3.11" }
digest = { version = "0.10.7", features = ["alloc"] }
num-bigint = { version = "0.4.4" }
num-rational = { version = "0.4.1" }
num-traits = { version = "0.2.16" }
rand_core = "0.6.4"
#rayon = "1.8.0"
#rug = { version = "1.22.0", optional = true }
serde = { version = "1.0.188", features = ["rc", "derive"] }
thiserror = "1.0.49"

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = "0.4.3"
num-bigint = "0.4.4"
num-rational = "0.4.1"
proptest = "1.3.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "multi_sig"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "stm"
harness = false

[[bench]]
name = "size_benches"
harness = false

[features]
portable = [
    "blst/portable",
] # portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
benchmark-internals = [] # For benchmarking multi_sig
