[package]
name = "mithril-stm"
version = "0.3.8"
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A Rust implementation of Mithril Stake-based Threshold Multisignatures (STMs)."
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
blake2 = { version = "0.10.6", default-features = false }
blst = { version = "0.3.11", default-features = false }
digest = { version = "0.10.7", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.4", default-features = false }
num-rational = { version = "0.4.1", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2.16", default-features = false }
rand_core = "0.6.4"
#rayon = "1.8.0"
#rug = { version = "1.22.0", optional = true }
serde = { version = "1.0.188", default-features = false, features = ["rc", "derive", "alloc"] }
#thiserror = "1.0.49"
thiserror-no-std = "2.0.2"
linked_list_allocator = "0.10.5"
libm = "0.2.1"

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = "0.4.3"
num-bigint = "0.4.4"
num-rational = "0.4.1"
proptest = "1.3.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[features]
portable = [
    "blst/portable",
] # portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
benchmark-internals = [] # For benchmarking multi_sig
