[package]
name = "poc_wasm_client"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.56"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
mithril-stm = { path = "../mithril-stm", default-features = false, features = [
    "num-integer-backend",
] }
blake2 = "0.10.4"
serde_bytes = "0.11.12"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.8"
chrono = "0.4.31"
kes-summed-ed25519 = { version = "0.2.1", features = ["sk_clone_enabled"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "serde"] }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]
