[package]
name = "poc_wasm_client"
version = "0.1.0"
description = "A PoC of a Mithril client in WASM"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
