[package]
name = "poc_wasm_client"
version = "0.1.0"
description = "A PoC of a Mithril client in WASM"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
blake2 = "0.10.4"
chrono = "0.4.31"
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "serde"] }
hex = "0.4.3"
js-sys = "0.3.64"
mithril-stm = { path = "../mithril-stm", default-features = false, features = [
    "num-integer-backend",
] }
serde = "1.0.188"
serde_bytes = "0.11.12"
serde_json = "1.0.107"
sha2 = "0.10.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]
